# Duplicate-Recognition

./: .gitignore  LICENSE  README.md  example.py  pyproject.toml  release.sh  requirements.txt
duplicate_recognition/: __init__.py  entity_algorithm.py  field_algorythm.py  statistics.py  utils.py
test/: randomized.py
